--- a/angular.json
+++ b/angular.json
@@ -5,11 +5,13 @@
       "projectType": "application",
       "root": "apps/party",
       "sourceRoot": "apps/party/src",
-      "prefix": "chrisfried-destiny-projects",
+      "prefix": "destiny",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
-          "outputs": ["{options.outputPath}"],
+          "outputs": [
+            "{options.outputPath}"
+          ],
           "options": {
             "outputPath": "dist/apps/party",
             "index": "apps/party/src/index.html",
@@ -17,8 +19,14 @@
             "polyfills": "apps/party/src/polyfills.ts",
             "tsConfig": "apps/party/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["apps/party/src/favicon.ico", "apps/party/src/assets"],
-            "styles": ["apps/party/src/styles.scss"],
+            "assets": [
+              "apps/party/src/favicon.ico",
+              "apps/party/src/assets"
+            ],
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+              "apps/party/src/styles.scss"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -83,7 +91,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/apps/party"],
+          "outputs": [
+            "coverage/apps/party"
+          ],
           "options": {
             "jestConfig": "apps/party/jest.config.js",
             "passWithNoTests": true
@@ -111,14 +121,20 @@
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
-          "outputs": ["{options.outputFile}"],
+          "outputs": [
+            "{options.outputFile}"
+          ],
           "options": {
-            "lintFilePatterns": ["apps/party-e2e/**/*.{js,ts}"]
+            "lintFilePatterns": [
+              "apps/party-e2e/**/*.{js,ts}"
+            ]
           }
         }
       },
       "tags": [],
-      "implicitDependencies": ["party"]
+      "implicitDependencies": [
+        "party"
+      ]
     }
   }
 }
