--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chrisfried-destiny-projects",
+  "name": "destiny",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -12,14 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^12.2.0",
+    "@angular/cdk": "^13.0.1",
     "@angular/common": "^12.2.0",
     "@angular/compiler": "^12.2.0",
     "@angular/core": "^12.2.0",
     "@angular/forms": "^12.2.0",
+    "@angular/material": "^13.0.1",
     "@angular/platform-browser": "^12.2.0",
     "@angular/platform-browser-dynamic": "^12.2.0",
     "@angular/router": "^12.2.0",
     "@nrwl/angular": "13.1.4",
+    "ag-grid-angular": "^26.1.0",
+    "ag-grid-community": "^26.1.0",
+    "ngx-csv-parser": "0.0.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
