--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "predeploy:party": "nx build party --prod --baseHref=/party-randomizer/",
+    "deploy:party-randomizer": "gh-pages -d dist/apps/party -o party"
   },
   "private": true,
   "dependencies": {
@@ -52,6 +54,7 @@
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "gh-pages": "^3.2.3",
     "jest": "27.2.3",
     "jest-preset-angular": "10.0.1",
     "prettier": "^2.3.1",
