--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser-dynamic": "15.0.4",
     "@angular/router": "15.0.4",
     "@nrwl/angular": "15.3.3",
-    "ngx-csv-parser": "0.0.7",
+    "ngx-papaparse": "^6.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "0.11.8"
@@ -51,14 +51,14 @@
     "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "gh-pages": "^3.2.3",
+    "gh-pages": "^4.0.0",
     "jest": "28.1.3",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "12.2.3",
+    "nx": "15.3.3",
     "prettier": "2.8.1",
     "ts-jest": "28.0.8",
     "ts-node": "10.9.1",
-    "typescript": "4.8.4",
-    "nx": "15.3.3"
+    "typescript": "4.8.4"
   }
 }
