--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "start": "nx serve",
+    "start scrubland": "nx serve scrubland",
     "build": "nx build",
     "test": "nx test",
     "predeploy:party": "nx build party --prod --baseHref=/party-randomizer/",
@@ -13,51 +14,56 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "15.0.4",
+    "@angular/animations": "~15.0.0",
     "@angular/cdk": "15.0.3",
-    "@angular/common": "15.0.4",
-    "@angular/compiler": "15.0.4",
-    "@angular/core": "15.0.4",
-    "@angular/forms": "15.0.4",
+    "@angular/common": "~15.0.0",
+    "@angular/compiler": "~15.0.0",
+    "@angular/core": "~15.0.0",
+    "@angular/forms": "~15.0.0",
     "@angular/material": "15.0.3",
-    "@angular/platform-browser": "15.0.4",
-    "@angular/platform-browser-dynamic": "15.0.4",
-    "@angular/router": "15.0.4",
+    "@angular/platform-browser": "~15.0.0",
+    "@angular/platform-browser-dynamic": "~15.0.0",
+    "@angular/router": "~15.0.0",
     "@nrwl/angular": "15.3.3",
+    "angular-oauth2-oidc": "^15.0.1",
+    "angular-oauth2-oidc-jwks": "^15.0.1",
+    "bungie-api-ts": "^4.22.2",
+    "fast-equals": "^5.0.0",
+    "idb-keyval": "^6.2.0",
     "ngx-papaparse": "^6.0.2",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "0.11.8"
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.0.4",
+    "@angular-devkit/build-angular": "~15.0.0",
     "@angular-eslint/eslint-plugin": "15.0.0",
     "@angular-eslint/eslint-plugin-template": "15.0.0",
     "@angular-eslint/template-parser": "15.0.0",
     "@angular/cli": "~15.0.0",
-    "@angular/compiler-cli": "15.0.4",
-    "@angular/language-service": "15.0.4",
+    "@angular/compiler-cli": "~15.0.0",
+    "@angular/language-service": "~15.0.0",
     "@nrwl/cli": "15.3.3",
     "@nrwl/cypress": "15.3.3",
     "@nrwl/eslint-plugin-nx": "15.3.3",
     "@nrwl/jest": "15.3.3",
     "@nrwl/linter": "15.3.3",
     "@nrwl/workspace": "15.3.3",
-    "@types/jest": "28.1.8",
-    "@types/node": "14.14.33",
+    "@types/jest": "28.1.1",
+    "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "5.47.0",
     "@typescript-eslint/parser": "5.47.0",
-    "cypress": "^8.3.0",
+    "cypress": "^11.0.0",
     "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "gh-pages": "^4.0.0",
-    "jest": "28.1.3",
+    "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "12.2.3",
     "nx": "15.3.3",
     "prettier": "2.8.1",
-    "ts-jest": "28.0.8",
+    "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "4.8.4"
   }
