--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start scrubland": "nx serve scrubland",
     "build": "nx build",
     "test": "nx test",
-    "predeploy:party": "nx build party --prod --baseHref=/party-randomizer/",
+    "predeploy:party": "nx build party --prod --baseHref=/",
     "deploy:party": "npm run predeploy:party && gh-pages -d dist/apps/party -o party"
   },
   "private": true,
