--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "fast-equals": "^5.0.0",
     "idb-keyval": "^6.2.0",
     "ngx-papaparse": "^6.0.2",
+    "p2pcf": "^1.3.14",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -52,6 +53,7 @@
     "@nrwl/workspace": "15.3.3",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
+    "@types/simple-peer": "^9.11.8",
     "@typescript-eslint/eslint-plugin": "5.47.0",
     "@typescript-eslint/parser": "5.47.0",
     "cypress": "^11.0.0",
